--- a/latest-offer.html
+++ b/latest-offer.html
@@ -73,7 +73,7 @@
             </div>
             <div class="w-full relative py-10">
                 <div class="swiper latestSaveCarousel relative z-0 py-5 md:py-10 font-inter">
-                    <div class="swiper-wrapper py-5 md:py-10">
+                    <div class="swiper-wrapper  md:py-10">
                         <div class="swiper-slide !h-auto
                                 transform transition-transform duration-500 ease-out will-change-transform
                                 scale-95 blur-[0.1rem]
@@ -340,7 +340,7 @@
 
     </section>
 
-    <section class="bg-white h-full md:pt-40 md:pb-[7.5rem] pt-10 pb-[4rem] overflow-hidden">
+    <section class="bg-white h-full md:pt-24 md:pb-[7.5rem]  pb-[4rem] overflow-hidden">
         <div class="view w-full flex flex-wrap md:gap-0 gap-14 md:justify-between">
             <div class="md:w-2/5 w-full">
                 <div class="flex flex-col gap-y-3 md:sticky md:top-4">
