--- a/offer-item.html
+++ b/offer-item.html
@@ -37,7 +37,8 @@
                     </div>
                 </div>
                 <div class="relative w-ful bg-[#FFFFFF] border border-[#E5E7EB] shadow-[0_4px_12px_0_#0000000F]">
-                    <div class="text-white  bg-gradient-to-l from-[#CB122D] to-[#650916] px-6 py-4 uppercase">
+                    <div
+                        class="text-white  bg-gradient-to-l from-[#CB122D] to-[#650916] text-balance px-6 py-4 uppercase">
                         <h2 class="text-white md:text-lg text-md font-semibold italic">Get this offer today</h2>
                     </div>
                     <div class="py-8 px-6">
@@ -163,7 +164,7 @@
     </section>
 
 
-    <section class="w-full relative bg-white  md:pb-[5.25rem] pb-[5rem]">
+    <section class="w-full relative bg-white  md:pb-[5.25rem] pb-[2rem]">
         <div class="view">
             <div class="w-full flex flex-col gap-1 md:gap-1">
                 <h2
@@ -173,15 +174,15 @@
                 <div class="bg-gradient-to-l from-[#CB122D]  to-[#650916] w-[7.375rem] w-20 h-3 -skew-x-[22deg]">
                 </div>
             </div>
-            <div class="w-full relative pt-12">
-                <div class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-1 gap-12">
+            <div class="w-full relative md:pt-12 ">
+                <div class="grid lg:grid-cols-4 md:grid-cols-4 grid-cols-1 md:gap-12 gap-8">
                     <div class="w-full relative group duration-500 h-full hover:lg:-translate-y-2">
                         <div class="number-outline text-[6.25rem] -mb-[4rem]">
                             01
                         </div>
                         <div class="flex flex-col gap-y-3 relative z-30">
                             <h3
-                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
+                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-balance text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
                                 Owners with fading or dull paintwork
                             </h3>
                             <p class="text-[#14293C] text-sm font-normal duration-500 ">
@@ -196,7 +197,7 @@
                         </div>
                         <div class="flex flex-col gap-y-3 relative z-30">
                             <h3
-                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
+                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-balance text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
                                 Drivers seeking complete preventive care
                             </h3>
                             <p class="text-[#14293C] text-sm font-normal duration-500 ">
@@ -211,7 +212,7 @@
                         </div>
                         <div class="flex flex-col gap-y-3 relative z-30">
                             <h3
-                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
+                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-balance text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
                                 Drivers seeking complete preventive care
                             </h3>
                             <p class="text-[#14293C] text-sm font-normal duration-500 ">
@@ -226,7 +227,7 @@
                         </div>
                         <div class="flex flex-col gap-y-3 relative z-30">
                             <h3
-                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
+                                class=" bg-gradient-to-l from-[#CB122D] to-[#650916] text-balance text-transparent bg-clip-text xl:text-2xl lg:text-2xl md:text-xl text-lg font-semibold duration-300">
                                 Owners with fading or dull paintwork
                             </h3>
                             <p class="text-[#14293C] text-sm font-normal duration-500 ">
@@ -239,9 +240,9 @@
             </div>
         </div>
     </section>
-    <section class="w-full relative bg-white  md:pb-[5.25rem] pb-[5rem]">
+    <section class="w-full relative bg-white  md:pb-[5.25rem] pb-[2rem] md:block hidden">
         <div class="view">
-            <div class="md:flex hidden w-full flex-col gap-4">
+            <div class="flex w-full flex-col gap-4">
                 <div class="font-bold text-[#000000] md:text-xl text-lg">*Terms & Conditions</div>
                 <div class="w-full relative flex flex-col gap-y-1">
                     <div class="text-[#000000A3] md:text-lg text-base">Additional parts or fluids, if required, will be
@@ -258,7 +259,7 @@
         </div>
     </section>
 
-    <section class="commonly bg-white relative w-full  pb-20 ">
+    <section class="commonly bg-white relative w-full pb-20">
         <div class="view flex flex-col md:gap-y-12 gap-y-8" id="commonlyAccordion">
             <div class="w-full relative ">
                 <div class="w-full flex flex-col gap-y-3">
