--- a/estimator.html
+++ b/estimator.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="!font-inter">
-    <section class="bg-white py-20">
+    <section class="bg-white md:py-20 py-6 pb-20">
         <div class="w-full flex flex-col gap-y-6">
             <div class="w-full group/services">
                 <div class="max-md:pb-3 border-b border-[#E5E7EB]">
@@ -706,8 +706,7 @@
                                             </div>
                                             <div class="w-3/5 w-full">
                                                 <div class="flex flex-col gap-y-6 p-4">
-                                                    <h2
-                                                        class="font-bold lg:text-xl md:text-lg text-base text-[#121212]">
+                                                    <h2 class="font-bold lg:text-xl text-lg text-[#121212]">
                                                         Premium Car
                                                         Service</h2>
                                                     <ul class="flex gap-2 items-center flex-wrap">
@@ -880,9 +879,9 @@
                                                             Full Body Respray
                                                         </li>
                                                         <li class="md:w-1/2 w-full">
-                                                            <button type="button"
-                                                                class="bg-transparent border-0 p-0 m-0 text-xs text-[#CB122D] underline">View
-                                                                More</button>
+                                                            <a href=""
+                                                                class="text-xs text-[#CB122D] underline">View
+                                                                More</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -902,7 +901,7 @@
 
                                                 </div>
                                                 <div>
-                                                    <button type="button"
+                                                    <a href=""
                                                         class="flex items-center gap-2 text-sm font-semibold text-[#4CAF50] bg-[#F1FAF1] h-[2.5rem] px-3 py-2 border border-transparent hover:border-[#4CAF50] duration-500">
                                                         <span>
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="18"
@@ -913,7 +912,7 @@
                                                             </svg>
                                                         </span>
                                                         Added
-                                                    </button>
+                                                    </a>
                                                 </div>
                                             </div>
                                             <p class="text-xs text-[#000000] font-normal flex items-center gap-2">
@@ -958,8 +957,7 @@
                                             </div>
                                             <div class="w-3/5 w-full">
                                                 <div class="flex flex-col gap-y-6 p-4">
-                                                    <h2
-                                                        class="font-bold lg:text-xl md:text-lg text-base text-[#121212]">
+                                                    <h2 class="font-bold lg:text-xl text-lg text-[#121212]">
                                                         Premium Car
                                                         Service</h2>
                                                     <ul class="flex gap-2 items-center flex-wrap">
@@ -1132,9 +1130,9 @@
                                                             Full Body Respray
                                                         </li>
                                                         <li class="md:w-1/2 w-full">
-                                                            <button type="button"
-                                                                class="bg-transparent border-0 p-0 m-0 text-xs text-[#CB122D] underline">View
-                                                                More</button>
+                                                            <a href=""
+                                                                class="text-xs text-[#CB122D] underline">View
+                                                                More</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -1154,7 +1152,7 @@
 
                                                 </div>
                                                 <div>
-                                                    <button type="button"
+                                                    <a href=""
                                                         class="flex flex-row-reverse items-center gap-2 text-sm font-semibold text-white bg-[#CB122D] h-[2.5rem] px-3 py-2 border border-transparent hover:bg-[#650916] duration-500">
                                                         <span>
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -1190,7 +1188,7 @@
                                                             </svg>
                                                         </span>
                                                         Add to Cart
-                                                    </button>
+                                                    </a>
                                                 </div>
                                             </div>
                                             <p class="text-xs text-[#000000] font-normal flex items-center gap-2">
@@ -1234,8 +1232,7 @@
                                             </div>
                                             <div class="w-3/5 w-full">
                                                 <div class="flex flex-col gap-y-6 p-4">
-                                                    <h2
-                                                        class="font-bold lg:text-xl md:text-lg text-base text-[#121212]">
+                                                    <h2 class="font-bold lg:text-xl text-lg text-[#121212]">
                                                         Premium Car
                                                         Service</h2>
                                                     <ul class="flex gap-2 items-center flex-wrap">
@@ -1408,9 +1405,9 @@
                                                             Full Body Respray
                                                         </li>
                                                         <li class="md:w-1/2 w-full">
-                                                            <button type="button"
-                                                                class="bg-transparent border-0 p-0 m-0 text-xs text-[#CB122D] underline">View
-                                                                More</button>
+                                                            <a href=""
+                                                                class="text-xs text-[#CB122D] underline">View
+                                                                More</a>
                                                         </li>
                                                     </ul>
                                                 </div>
@@ -1430,7 +1427,7 @@
 
                                                 </div>
                                                 <div>
-                                                    <button type="button"
+                                                    <a href=""
                                                         class="flex flex-row-reverse items-center gap-2 text-sm font-semibold text-white bg-[#CB122D] h-[2.5rem] px-3 py-2 border border-transparent hover:bg-[#650916] duration-500">
                                                         <span>
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -1466,7 +1463,7 @@
                                                             </svg>
                                                         </span>
                                                         Add to Cart
-                                                    </button>
+                                                    </a>
                                                 </div>
                                             </div>
                                             <p class="text-xs text-[#000000] font-normal flex items-center gap-2">
@@ -1605,10 +1602,10 @@
                                             </div>
                                         </div>
                                         <div>
-                                            <button type="button"
+                                            <a href=""
                                                 class="bg-transparent p-0 m-0  border-0 text-[#CB122D] font-semibold underline md:text-sm text-xs hover:text-[#650916] duration-500">Click
                                                 to change
-                                            </button>
+                                        </a>
                                         </div>
                                     </div>
 
@@ -1630,7 +1627,7 @@
                                                 </div>
                                             </div>
                                             <div>
-                                                <button type="button"
+                                                <a href=""
                                                     class="bg-transparent p-0 m-0  border-0 text-[#CB122D]s hover:text-[#650916] duration-500">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                                         viewBox="0 0 20 20" fill="none">
@@ -1659,28 +1656,28 @@
                                                             </clipPath>
                                                         </defs>
                                                     </svg>
-                                                </button>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="border-t border-[#EFEFEF] pt-6">
                                         <div
                                             class="w-full flex flex-col gap-y-2 justify-between bg-white border border-[#EFEFEF] p-6">
-                                                <div class="w-full flex justify-between items-center gap-2">
-                                                    <div
-                                                    class="text-[#444444] text-sm font-medium">
-                                                   Subtotal (1 service)</div>
-                                                    <div class="text-[#121212] lg:text-lg md:text-md text-base font-bold">
-                                                        ₹2,999
-                                                    </div>
+                                            <div class="w-full flex justify-between items-center gap-2">
+                                                <div class="text-[#444444] text-sm font-medium">
+                                                    Subtotal (1 service)</div>
+                                                <div class="text-[#121212] lg:text-lg md:text-md text-base font-bold">
+                                                    ₹2,999
+                                                </div>
                                             </div>
-                                            <p class="text-[#AFAFAF] text-xs font-normal">* Final price may vary after diagnosis</p>
+                                            <p class="text-[#AFAFAF] text-xs font-normal">* Final price may vary after
+                                                diagnosis</p>
+                                        </div>
                                     </div>
-                                      </div>
                                     <div class="w-full">
-                                        <button type="button"
+                                        <a href=""
                                             class="h-[3.438rem] w-full bg-[#CB122D] text-base flex justify-center items-center text-white font-bold hover:bg-[#650916] duration-500">Proceed
-                                            to Checkout</button>
+                                            to Checkout</a>
                                     </div>
                                 </div>
                             </div>
@@ -1691,10 +1688,23 @@
         </div>
     </section>
 
-
+    <div
+        class="view h-[4.938rem] group/check w-full fixed bottom-0 inset-x-0  md:hidden flex justify-between items-center gap-2 bg-white border border-[#E5E5E5] shadow-[0_-4px_16px_0_#00000014]">
+        <div class="flex flex-col w-full">
+            <div class="text-[#637083] text-xs font-normal">1 item</div>
+            <div class="text-[#121212] text-lg font-bold">₹2,999</div>
+        </div>
+         <div class="w-full flex justify-end">    
+            <a href=""
+            class="bg-[#CB122D] w-fit px-8 rounded-2xl h-[2.875rem] flex justify-center items-center text-sm font-bold text-white duration-500 hover:bg-[#CB122D]">
+            View Cart</a> </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
